new dome exercises practice

--- a/first ex.html
+++ b/first ex.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <link rel="stylesheet" href="bus card.css" />
   </head>
@@ -12,9 +13,9 @@
         <button id="email">Email</button>
         <br />
         <button id="linkin">LinkedIn</button>
-        <ul>
-            <li>first</li>
-            <li>second</li>
+        <ul >
+            <li class="list">first</li>
+            <li class="list ">second</li>
         </ul>
         <div class="main2">
           <h2>About</h2>
@@ -35,4 +36,4 @@
   </main>
   <script src="app.js"></script>
   </body>
-  
+  </html>
