--- a/pratice exerises/prt.html
+++ b/pratice exerises/prt.html
@@ -1,6 +1,8 @@
 <html>
     <body>
-        <button onclick="tm()" class="one">clickto see time </button>
+        <button  onclick="cla()" class="one">click to get an answer</button>
+        <input type="text" class="num">
+        <p></p>
     </body>
     <script src="prt.js"></script>
 </html>
