--- a/pratice exerises/q2/fnct.html
+++ b/pratice exerises/q2/fnct.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
     <p id="zack">this is the contant</p>
+    <p>one</p>
+</div>
 </body>
 <script>
     let id = document.querySelector('#zack');
@@ -17,5 +20,5 @@
     add(id);
 
 </script>
-</html> -->
+</html>
 
