--- a/pratice exerises/q4/hide.html
+++ b/pratice exerises/q4/hide.html
@@ -16,11 +16,11 @@
     let i=true;
     function show(){
         if(i === true){
-            z.style.display ='inline';
+            z.style.visibility ='visible';
             i=false;
         }
         else{
-            z.style.display='none';
+            z.style.visibility='hidden';
             i=true;
         }
     }
